<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#000">

        <ImageView
            android:id="@+id/iv_login_back"
            android:src="@mipmap/back"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_tab_user"
            android:textColor="#fff"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@mipmap/login_wel">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_wel"
            android:textColor="#000"
            android:textSize="32sp" />
    </RelativeLayout>

    <EditText
        android:paddingLeft="15dp"
        android:id="@+id/login_num"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="@dimen/normal_margin"
        android:layout_marginRight="@dimen/normal_margin"
        android:numeric="integer"
        android:drawableLeft="@mipmap/user_num"
        android:hint="@string/login_num_hint"
        />
    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="@dimen/normal_margin"
        android:layout_marginRight="@dimen/normal_margin"
        android:drawableLeft="@mipmap/user_password"
        android:inputType="textPassword"
        android:hint="@string/login_password_hint"
        android:paddingLeft="15dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/normal_margin"
        android:paddingLeft="@dimen/normal_margin">
        <CheckBox
            android:id="@+id/login_re_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/login_re_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="记住密码"/>
        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="忘记密码？"/>
    </RelativeLayout>

    <Button
        style="@style/login_button"
        android:id="@+id/login_btn_enter"
        android:background="#FF971C"
        android:text="登录"/>
    <Button
        style="@style/login_button"
        android:id="@+id/login_btn_register"
        android:background="#359f15"
        android:text="注册"/>

</LinearLayout>
